# itertols

./: LICENSE.txt  README.md  pyproject.toml  setup.py
itertols.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
