[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-package"
version = "0.1.0"
authors = [
    {name = "Maxim", email = "ztncrypted@email.com"},
]
description = "Functions creating iterators for efficient looping"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [  # Зависимости (если есть)
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/e-th3r/itertols"